fix: remove redundant plan duplication logic and clean up skipped request handling