@@ -57,7 +57,7 @@ public class SessionManagementServiceImpl implements SessionManagementService {
     Session session =
         sessionRepository
             .findByIdAndUserIdWithSets(sessionId, userId)
-            .orElseThrow(() -> new ResourceNotFoundException("Session not found"));
+            .orElseThrow(() -> new ResourceNotFoundException("Session", sessionId.toString()));
 
     return convertSessionToResponse(session, true);
   }
@@ -203,12 +203,6 @@ public class SessionManagementServiceImpl implements SessionManagementService {
     updatePlanProgression(session);
 
     log.info("Successfully completed session: {}", sessionId);
-
-    // create new plan day for next week
-    // find current plan day and duplicate it for next week
-    PlanDay currentPlanDay = session.getPlanDay();
-    customPlanService.duplicatePlanDayForNextWeek(currentPlanDay);
-
     return convertSessionToResponse(session, true);
   }
 
@@ -243,19 +237,14 @@ public class SessionManagementServiceImpl implements SessionManagementService {
     if (request.getSetDurationSeconds() != null) {
       actualNode.put("setDurationSeconds", request.getSetDurationSeconds());
     }
-    //    if (request.getIsSkipped()) {
-    //      actualNode.put("isSkipped", true);
-    //      if (request.getFailureReason() != null) {
-    //        actualNode.put("failureReason", request.getFailureReason());
-    //      }
-    //    }
-    if (request.getNotes() != null) {
-      actualNode.put("notes", request.getNotes());
+    if (request.getIsSkipped()) {
+      actualNode.put("isSkipped", true);
+    }else{
+      actualNode.put("completedAt", LocalDateTime.now().toString());
     }
 
-    // Mark as completed if not skipped
-    if (!request.getIsSkipped()) {
-      actualNode.put("completedAt", LocalDateTime.now().toString());
+    if (request.getNotes() != null) {
+      actualNode.put("notes", request.getNotes());
     }
 
     sessionSet.setActual(actualNode);
@@ -420,7 +409,7 @@ public class SessionManagementServiceImpl implements SessionManagementService {
       List<SessionSetResponse> sessionSetDtos =
           session.getSessionSets().stream()
               .map(this::convertSessionSetToResponse)
-              .collect(Collectors.toList());
+              .toList();
       dto.setSessionSets(sessionSetDtos);
 
       // Calculate summary stats
